# password-manager

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  PLAN.md  README.md  SECURITY.md  SPEC.md  btca.config.jsonc  opencode.json  package.json  pnpm-lock.yaml
.codex/: config.toml
.github/workflows/: ci.yml  fuzz.yml  release.yml  sbom.yml  security-audit.yml
apps/desktop/: electron-builder.yml  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.electron.json  vite.config.ts
apps/desktop/e2e/: smoke.spec.ts
apps/desktop/scripts/: dev-electron.js  make-icns.mjs
apps/desktop/src/: App.svelte  app.css  global.d.ts
apps/desktop/src-electron/: main.ts  preload.cts  preload.ts
apps/desktop/src/lib/: app.test.ts  app.ts
crates/npw-addon/: Cargo.toml
crates/npw-addon/src/: config.rs  lib.rs
crates/npw-cli/: Cargo.toml
crates/npw-cli/src/: main.rs
crates/npw-core/: Cargo.toml
crates/npw-core/src/: lib.rs  model.rs  password.rs  secure_memory.rs  totp.rs  vault.rs
crates/npw-domain/: Cargo.toml
crates/npw-domain/src/: lib.rs
crates/npw-storage/: Cargo.toml
crates/npw-storage/src/: lib.rs
crates/npw-storage/tests/: lock_contention.rs
docs/: backups-recovery.md  getting-started.md  import-export.md  passkey-references.md  password-generator.md  releasing.md  security-defaults.md  threat-model.md  totp.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: import_bitwarden_json.rs  import_csv_parser.rs  payload_cbor_parser.rs  vault_header_parser.rs
scripts/: build-addon.mjs  setup-btca.sh
