[workspace]
members = [
    "crates/npw-addon",
    "crates/npw-cli",
    "crates/npw-core",
    "crates/npw-domain",
    "crates/npw-storage",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.93"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
napi = { version = "3.5.2", default-features = false, features = ["napi6"] }
napi-derive = "3.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
