[workspace]
members = [
    "crates/npw-addon",
    "crates/npw-cli",
    "crates/npw-core",
    "crates/npw-domain",
    "crates/npw-storage",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.93"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
ciborium = "0.2.2"
clap = { version = "4.5.53", features = ["derive"] }
data-encoding = "2.9.0"
directories = "6.0.0"
fs2 = "0.4.3"
getrandom = "0.3.4"
hkdf = "0.12.4"
hmac = "0.12.1"
napi = { version = "3.5.2", default-features = false, features = ["napi6"] }
napi-derive = "3.3.3"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.17"
toml = "0.9.8"
unicode-normalization = "0.1.25"
url = "2.5.8"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
zeroize = "1.8.2"
