[package]
name = "npw-addon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
data-encoding.workspace = true
napi.workspace = true
napi-derive.workspace = true
npw-core = { path = "../npw-core" }
npw-storage = { path = "../npw-storage" }
qrcode.workspace = true
uuid.workspace = true
zeroize.workspace = true
