[package]
name = "npw-addon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
csv.workspace = true
data-encoding.workspace = true
directories.workspace = true
getrandom.workspace = true
keyring.workspace = true
napi.workspace = true
napi-derive.workspace = true
npw-core = { path = "../npw-core" }
npw-storage = { path = "../npw-storage" }
qrcode.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
zeroize.workspace = true
