[package]
name = "npw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
npw-core = { path = "../npw-core" }
npw-domain = { path = "../npw-domain" }
npw-storage = { path = "../npw-storage" }
