[package]
name = "npw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
ciborium.workspace = true
clap.workspace = true
directories.workspace = true
getrandom.workspace = true
npw-core = { path = "../npw-core" }
npw-storage = { path = "../npw-storage" }
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
