[package]
name = "npw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
arboard.workspace = true
clap.workspace = true
csv.workspace = true
data-encoding.workspace = true
directories.workspace = true
getrandom.workspace = true
npw-core = { path = "../npw-core" }
npw-storage = { path = "../npw-storage" }
qrcode.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
uuid.workspace = true
