[package]
name = "npw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
argon2.workspace = true
chacha20poly1305.workspace = true
ciborium.workspace = true
data-encoding.workspace = true
getrandom.workspace = true
hkdf.workspace = true
hmac.workspace = true
serde.workspace = true
serde_bytes.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
url.workspace = true
uuid.workspace = true
zeroize.workspace = true
